k8s/my-app/templates/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
  labels:
    app: client
spec:
  type: ClusterIP
  selector:
    app: client
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
