k8s/my-app/templates/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster-ip-service
  labels:
    app: nginx
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
