k8s/my-app/templates/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service 
spec: 
  type: ClusterIP
  selector:
    app: server   # ✅ FIXED
  ports:
    - port: 5000
      targetPort: 5000
